--- a/src/ihave/templates/base.html
+++ b/src/ihave/templates/base.html
@@ -12,7 +12,7 @@
       <div id="header">
         <div style="float:right">
           {% if current_user %}
-            <a href="/compose">{{ _("New post") }}</a> -
+            {{current_user.username}}<a href="/compose">{{ _("New post") }}</a> -
             <a href="/auth/logout?next={{ url_escape(request.uri) }}">{{ _("Sign out") }}</a>
           {% else %}
             {{ _('<a href="%(url)s">Sign in</a> to compose/edit') % {"url": "/auth/login?next=" + url_escape(request.uri)} }}
